google api connection successful
- able to connect to google sheet and fetch its name

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
+    "google-auth-library": "^9.13.0",
     "google-spreadsheet": "^4.1.2"
   }
 }
