--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
     "google-auth-library": "^9.13.0",
-    "google-spreadsheet": "^4.1.2"
+    "google-spreadsheet": "^4.1.2",
+    "typescript-logging": "^2.2.0",
+    "typescript-logging-category-style": "^2.2.0"
   }
 }
